frontend/style.css
html {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  background-color: #042f3e;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

aside {
  position: absolute;
  right: 30px;
  color: #487280;
  font-size: 1.5em;
}

header {
  display: flex;
  align-items: center;
  margin-left: 40px;
}

.recharts-text {
  fill: #43555c;
}

.recharts-default-tooltip {
  background-color: #042f3ece !important;
  border-color: #548fa5 !important;
}

.recharts-tooltip-label {
  color: white;
}

.recharts-responsive-container:nth-of-type(3) .recharts-tooltip-item {
  color: white !important;
}

.recharts-legend-item {
  margin-bottom: 5px;
}

.spinner {
  border: 5px solid #f3f3f3;
  border-top: 5px solid #3498db;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.reveal-button {
  margin-right: 12px;
  transform: translate(0, 4px);
}

.DayPickerInput input {
  border-radius: 5px;
  padding: 6px;
  text-align: center;
  width: 150px;
}

.InputFromTo
  .DayPicker-Day--selected:not(.DayPicker-Day--start):not(.DayPicker-Day--end):not(.DayPicker-Day--outside) {
  background-color: #f0f8ff !important;
  color: #4a90e2;
}

.InputFromTo .DayPicker-Day {
  border-radius: 0 !important;
}

.InputFromTo .DayPicker-Day--start {
  border-top-left-radius: 50% !important;
  border-bottom-left-radius: 50% !important;
}

.InputFromTo .DayPicker-Day--end {
  border-top-right-radius: 50% !important;
  border-bottom-right-radius: 50% !important;
}

.InputFromTo .DayPickerInput-Overlay {
  width: 550px;
}

.InputFromTo-to .DayPickerInput-Overlay {
  margin-left: -198px;
}

